--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,17 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
   width: 100vw;
   height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: rgb(23, 23, 23);
-  color: antiquewhite;
+  /* 일반 css파일에서 @apply를 사용하면 tailwind문법을 그대로 사용할 수 있다. */
+  @apply flex flex-col items-center;
+  @apply bg-zinc-900 text-gray-50;
 }
+
 #root {
-  width: 100%;
-  max-width: 70%;
+  @apply w-full max-w-screen-2xl
 
 }
 :root {
